# getjob4u

./: .env.example  .gitignore  AWS_DEPLOYMENT.md  README.md  SEO_AND_BACKLINKS.md  _smoke_blog.py  ats_scorer.py  database.py  email_generator.py  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.ebextensions/nginx/conf.d/: proxy.conf
.platform/nginx/conf.d/: proxy.conf
data/: blog_posts.json  blogs.json  career_roadmap.json  free_ai_tools.json  free_courses.json  interview_tips.json  job_portals.json  python_questions.json  sample_resumes.json  youtube_channels.json
static/: maintenance.html  robots.txt
static/.well-known/: security.txt
static/css/: style.css
static/js/: analytics.js  ats.js  copy.js  email.js  feedback.js  main.js  python_playground.js  python_questions.js  python_runner.js  tabs.js
templates/: about.html  admin_dashboard.html  admin_login.html  ats_scanner.html  base.html  blog_post.html  blogs.html  career_roadmap.html  contact.html  email_generator.html  feedback.html  free_ai_tools.html  free_courses.html  index.html  interview_tips.html  job_portals.html  privacy.html  python_playground.html  python_questions.html  sample_resumes.html  youtube_resources.html
