[project]
name = "getjob4u"
version = "0.1.0"
description = "Free AI/ML/DS job seeker toolkit - Resume ATS scanner, interview prep, cold email templates, and career roadmap"
readme = "README.md"
authors = [{name = "Kuldeep Jeengar", email = "kuldeep@getjob4u.com"}]
license = {text = "MIT"}
keywords = ["career", "ai", "ml", "data-science", "job-search", "resume", "ats-scanner", "interview-prep"]
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]
